--- a/WPFApp/MainWindow.xaml
+++ b/WPFApp/MainWindow.xaml
@@ -5,9 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFApp"
         mc:Ignorable="d"
-        Title="Lê Trần Bảo Duy-SE182424-MainWindow-Product Management" Height="450" Width="800
-        ">
+        Title="Lê Trần Bảo Duy-SE182424-MainWindow-Product Management" Height="670" Width="710">
     <Grid>
-
+        <Grid>
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#0099FF" Offset="0.086"/>
+                    <GradientStop Color="#FF347BDA" Offset="0.757"/>
+                    <GradientStop Color="#FF60B1E7" Offset="0.952"/>
+                    <GradientStop Color="#FF596FDD" Offset="0.336"/>
+                    <GradientStop Color="#FFAAA2E0" Offset="0.531"/>
+                </LinearGradientBrush>
+            </Grid.Background>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="119.415"/>
+                <ColumnDefinition Width="30.585"/>
+                <ColumnDefinition Width="47*"/>
+                <ColumnDefinition Width="513*"/>
+            </Grid.ColumnDefinitions>
+            <Label x:Name="label" Content="Product Management" Grid.Column="2" Grid.Row="0" FontSize="36" Grid.ColumnSpan="2" HorizontalAlignment="Center" Width="466"/>
+            <Label Content="Product ID" HorizontalAlignment="Left" Height="30" Grid.Row="1" VerticalAlignment="Center" Width="86" FontSize="13"/>
+            <Label Content="Category" HorizontalAlignment="Left" Height="30" Grid.Row="5" VerticalAlignment="Center" Width="109" FontSize="13"/>
+            <Label Content="Product Name" HorizontalAlignment="Left" Height="30" Grid.Row="2" VerticalAlignment="Center" Width="109" FontSize="15"/>
+            <Label Content="Price" HorizontalAlignment="Left" Height="30" Grid.Row="3" VerticalAlignment="Center" Width="86" FontSize="13"/>
+            <Label Content="Units In Stock" HorizontalAlignment="Left" Height="30" Grid.Row="4" VerticalAlignment="Center" Width="109" FontSize="15"/>
+            <TextBox x:Name="txtProductID" Grid.Column="2" HorizontalAlignment="Left" Height="20" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="560" FontSize="13" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="txtProductName" Grid.Column="2" HorizontalAlignment="Left" Height="20" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center" Width="560" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="txtPrice" Grid.Column="2" HorizontalAlignment="Left" Height="20" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="560" FontSize="13" Grid.ColumnSpan="2"/>
+            <TextBox x:Name="txtUnitsInStock" Grid.Column="2" HorizontalAlignment="Left" Height="20" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Width="560" FontSize="13" Grid.ColumnSpan="2"/>
+            <ComboBox x:Name="cboCategory" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" Grid.Row="5" VerticalAlignment="Center" Width="560"/>
+            <DataGrid x:Name="dgData" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Margin ="29,0,10,67" SelectionChanged="dgData_SelectionChanged"/>
+            <Button  x:Name="btnCreate" Content="Create" HorizontalAlignment="Left" Margin="29,365,0,17" Grid.Row="6" Width="121"  Background="#FF0099FF" BorderBrush="White" Foreground="White" Grid.ColumnSpan="3" Grid.Column="1" Click="btnCreate_Click"/>
+            <Button x:Name="btnUpdate" Content="Update" Grid.Column="3" HorizontalAlignment="Left" Margin="92,365,0,17" Grid.Row="6" Width="118" Background="#FF39C855" Foreground="White" RenderTransformOrigin="0.37,0.2" Click="btnUpdate_Click"/>
+            <Button x:Name="btnDelete" Content="Delete" Grid.Column="3" HorizontalAlignment="Left" Margin="233,365,0,17" Grid.Row="6" Width="127" Foreground="White" Background="#FF9F3DAA" Click="btnDelete_Click"/>
+            <Button x:Name="btnClose" Content="Close" Grid.Column="3" HorizontalAlignment="Left" Margin="383,365,0,17" Grid.Row="6" Width="120" Background="#FFFF0707" Foreground="White" Click="btnClose_Click"/>
+        </Grid>
     </Grid>
 </Window>
